Bug 1399395 - Skip devicechange event handler in shutdown stage. r=pehrsons, a=lizzard

MozReview-Commit-ID: 8skWP7LuGvR